Add new setting Sort Save to playlist Dialog
Update settings view css

Shorten updateContext interval

--- a/src/yup/yup.html
+++ b/src/yup/yup.html
@@ -23,7 +23,7 @@
     <div id="yu-id-main-view">
 
       <!-- Blurb -->
-      <p>Yutumu is a Chrome extension that enhances YouTube Music with new features.</p>
+      <p class="yu-cl-main-view-blurb">Yutumu is a Chrome extension that enhances YouTube Music with new features.</p>
 
       <!-- Playlist Section -->
       <div class="yu-cl-yup-section" data-context="playlist">
@@ -60,6 +60,12 @@
         <div class="yu-cl-setting-item">
           <label for="yu-id-setting-sort-playlist-sidebar" class="yu-cl-setting-label">Sort Playlist Sidebar</label>
           <input type="checkbox" id="yu-id-setting-sort-playlist-sidebar" class="yu-cl-setting-toggle" />
+        </div>
+
+        <!-- Sort "Save to playlist" Dialog -->
+        <div class="yu-cl-setting-item">
+          <label for="yu-id-setting-sort-save-to-playlist-dialog" class="yu-cl-setting-label">Sort "Save to playlist" Dialog</label>
+          <input type="checkbox" id="yu-id-setting-sort-save-to-playlist-dialog" class="yu-cl-setting-toggle" />
         </div>
 
         <!-- Additional settings -->
