Add new setting Sort playlist by English only
Update setting labels

--- a/src/yup/yup.html
+++ b/src/yup/yup.html
@@ -56,15 +56,18 @@
       <!-- Settings -->
       <div class="yu-cl-settings-content">
 
-        <!-- Sort Playlist Sidebar -->
         <div class="yu-cl-setting-item">
-          <label for="yu-id-setting-sort-playlist-sidebar" class="yu-cl-setting-label">Sort Playlist Sidebar</label>
+          <label for="yu-id-setting-sort-playlist-by-english-only" class="yu-cl-setting-label">Sort playlist by English only</label>
+          <input type="checkbox" id="yu-id-setting-sort-playlist-by-english-only" class="yu-cl-setting-toggle" />
+        </div>
+
+        <div class="yu-cl-setting-item">
+          <label for="yu-id-setting-sort-playlist-sidebar" class="yu-cl-setting-label">Sort playlist sidebar</label>
           <input type="checkbox" id="yu-id-setting-sort-playlist-sidebar" class="yu-cl-setting-toggle" />
         </div>
 
-        <!-- Sort "Save to playlist" Dialog -->
         <div class="yu-cl-setting-item">
-          <label for="yu-id-setting-sort-save-to-playlist-dialog" class="yu-cl-setting-label">Sort "Save to playlist" Dialog</label>
+          <label for="yu-id-setting-sort-save-to-playlist-dialog" class="yu-cl-setting-label">Sort "Save to playlist" dialog</label>
           <input type="checkbox" id="yu-id-setting-sort-save-to-playlist-dialog" class="yu-cl-setting-toggle" />
         </div>
 
