Update yutumu spelling to lowercase

--- a/src/yue/yue.html
+++ b/src/yue/yue.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Yutumu</title>
+  <title>yutumu</title>
 </head>
 
 <body class="yu-cl-extension-body">
-  <button id="yu-id-reopen-yup" class="yu-cl-extension-button">Open Yutumu</button>
+  <button id="yu-id-reopen-yup" class="yu-cl-extension-button">Open yutumu</button>
   <!-- Popup bundle script will be injected here automatically -->
 </body>
 
