--- a/src/yup/yup.html
+++ b/src/yup/yup.html
@@ -23,7 +23,7 @@
     <div id="yu-id-main-view">
 
       <!-- Blurb -->
-      <p class="yu-cl-main-view-blurb">Yutumu is a Chrome extension that enhances YouTube Music with new features.</p>
+      <p class="yu-cl-main-view-blurb">yutumu is a Chrome extension that enhances YouTube Music with new features.</p>
 
       <!-- Playlist Section -->
       <div class="yu-cl-yup-section" data-context="playlist">
